# holodemo

./: CMakeLists.txt  package.xml
config/: transforms (copy).yaml  transforms.yaml
launch/: all.launch  bridge.launch  publish_description.launch  real.launch  sim.launch
msg/: MyCameraInfo.msg  custom_text.msg  mesh.msg  zone.msg
nodes/: mover  pose_broadcaster  static_publisher  viz_manager
rviz/: joint_viewer.rviz
src/: Zone.py  add_zone.py  distance_text.py  jacob.cpp  path.py  photo.py  place_robot.py  setup.sh  test_pub_states.py  test_text.py  zone.bag  zone_list.py
src/bags/: mesh.bag  temp.bag  text.bag  zone.bag
src/mesh/: add_mesh.py  mesh_list.py
src/position_robot/: place_robot.py
src/text/: custom_text.py  text_list.py
src/zone/: add_zone.py  zone_list.py
urdfs/: edited_azure_kinect.urdf.xacro  panda.urdf  panda_arm.urdf  panda_arm_hand.urdf  panda_azure_kinect.urdf.xacro  panda_old.urdf  panda_with_inertia.urdf
